tests/errors/missing_condition_on_while.odl
main :: () -> void {
    while x := 0; y := 0 then return;
};